--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       width:130px;
     }
     </style>
-      <title>Real Time Speech Enhancement in the Waveform Domain</title>
+      <title>Noise Reduction Model </title>
     </head>
     
     <body>
